# 6-string-optimizer

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
app/: demo.py
configs/: default.yaml
examples/: rosenbrock_fr_benchmark.py  rosenbrock_s3_eb_master.py
fisher_rao/: PHASE1.md  PHASE2.md  PHASE3.md  PHASE4.md  README.md  __init__.py  burst_modulation.py  fisher_info.py  invariants.py  losses.py  metrics.py
physics_audio/: README.md  requirements.txt  run_fr_smoke_test.py  run_multi.py  run_real_audio.py
physics_audio/training_evaluation/: audio_utils.py  batch_analysis.py  config.py  evaluator.py  fisher_rao_losses.py  fr_utils.py  invariant_losses.py  losses.py  model.py  streaming_stft.py  trainer.py  tuner.py  utils.py  viz.py
scripts/: compare_fr_modulation.py  ensemble_top3_eb.py  run_tuning_toolbox.py
src/optimizer/: __init__.py  burst_optimizer.py  losses.py  manifolds.py  models.py  utils.py
tests/: test_fisher_rao.py  test_physics_audio_invariants.py
