[tool.hatch.build.targets.wheel]
packages = ["src/optimizer"]

[project]
name = "vqc-optimizer"          # hyphen is fine here
version = "0.1.0"
description = "A Highly Adaptive Riemannian Optimizer for Geometric Deep Learning and Constrained Optimization"
# ... other project metadata ...

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


